crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__collections__acceptance_test_20_map_some.snap
---
source: crates/nash-codegen/src/build/tests/source/collections.rs
assertion_line: 53
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Literal exposing (..)\nimport Eq exposing (..)\ntype option 'a = None | Some 'a\nimpl Eq 'a => Eq (option 'a) where\n    eq a b =\n        case (a, b) of\n            (None, None) -> True\n            (Some x, Some y) -> eq x y\n            _ -> False\nmap opt f =\n    case opt of\n        None -> None\n        Some a -> Some (f a)\nmain = eq (map (Some 14) (\\n -> addInteger n 1)) (Some 15)\n"
---
--- core
let fromBool#10 : bool -> bool = \value#33 : bool -> value#33 in
let eq#13 : int -> int -> bool = equalsInteger in
let eq#2 : Main.option 'erased -> Main.option 'erased -> bool = \a#8 : Main.option 'erased b#9 : Main.option 'erased -> let match#14 : (Main.option 'erased, Main.option 'erased) = constr 0 a#8 b#9 in
let leaf#20 : @delay bool = delay (fromBool#10 false) in
case@Tag match#14 of
  0 field#21 field#22 -> case@Tag field#21 of
    0 -> case@Tag field#22 of
      0 -> fromBool#10 true
      1 field#23 -> force leaf#20
    1 field#24 -> case@Tag field#22 of
      0 -> force leaf#20
      1 field#25 -> let x#11 : 'erased = field#24 in
      let y#12 : 'erased = field#25 in
      eq#13 x#11 y#12 in
let map#3 : Main.option 'erased -> ('erased -> 'erased) -> Main.option 'erased = \opt#26 : Main.option 'erased (f#27 : 'erased -> 'erased) -> let match#30 : Main.option 'erased = opt#26 in
case@Tag match#30 of
  0 -> constr 0
  1 field#31 -> let a#28 : 'erased = field#31 in
  (\field#29 : 'erased -> constr 1 field#29) (f#27 a#28) in
let fromInt#5 : int -> int = \value#32 : int -> value#32 in
let main#1 : bool = eq#2 (map#3 ((\field#4 : int -> constr 1 field#4) (fromInt#5 14)) (\n#6 : int -> addInteger n#6 (fromInt#5 1))) ((\field#7 : int -> constr 1 field#7) (fromInt#5 15)) in
main#1
--- uplc
(program 1.1.0
  [(lam fromBool_10
    [(lam eq_13
      [(lam eq_2
        [(lam map_3
          [(lam fromInt_5
            [(lam main_1 main_1)
              [[eq_2
                [[map_3 [(lam field_4 (constr 1 field_4)) [fromInt_5 (con integer 14)]]]
                  (lam n_6 [[(builtin addInteger) n_6] [fromInt_5 (con integer 1)]])]]
                [(lam field_7 (constr 1 field_7)) [fromInt_5 (con integer 15)]]]])
            (lam value_32 value_32)])
          (lam opt_26
            (lam f_27
              [(lam match_30
                (case
                  match_30
                  (constr 0)
                  (lam field_31
                    [(lam a_28 [(lam field_29 (constr 1 field_29)) [f_27 a_28]]) field_31])))
                opt_26]))])
        (lam a_8
          (lam b_9
            [(lam match_14
              [(lam leaf_20
                (case
                  match_14
                  (lam field_21
                    (lam field_22
                      (case
                        field_21
                        (case field_22 [fromBool_10 (con bool True)] (lam field_23 (force leaf_20)))
                        (lam field_24
                          (case
                            field_22
                            (force leaf_20)
                            (lam field_25 [(lam x_11 [(lam y_12 [[eq_13 x_11] y_12]) field_25]) field_24]))))))))
                (delay [fromBool_10 (con bool False)])])
              (constr 0 a_8 b_9)]))])
      (builtin equalsInteger)])
    (lam value_33 value_33)])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1689641, memory: 9703
